<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_data">Access Data</string>
    <string name="add_contact">Add Contact</string>
    <string name="agree_to_all">Accept all</string>
    <string name="all_partners_toolbar_title">Partners (All vendors)</string>
    <string name="allow_overlay">"To use this feature, please enable the 'Draw / Display over other apps' permission (also known as 'Apps that can appear on top') for Textra."</string>
    <string name="allow_overlay2">"It's considered by Android to be a special permission, so on most phones you access it from the gear or dot-dot-dot icon (top right) in Android Settings > Apps, and "<b>not</b> from the Textra permissions screen.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_icon_changed_body">Your app icon has changed! So, you need to add it back to your home screen again.</string>
    <string name="app_name">Textra 2</string>
    <string name="app_shortcut_new_message_short">New Message</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="blacklist_empty">To blocklist, long press in the chat list and select \"Blocklist\" from the menu.</string>
    <string name="blacklist_empty2">When you blocklist a chat it is hidden from the chat list and only shown here, where you can view and unblock it. Messages you receive or send are still saved.</string>
    <string name="blacklist_empty3">You can also do this in a specific chat.</string>
    <string name="blacklisted_button_unblacklist">Un-blocklist</string>
    <string name="blacklisted_delete_convo">Delete Chat</string>
    <string name="blacklisted_summary">A blocklisted chat is not shown in the chat list, and you are not notified when receiving messages.</string>
    <string name="blacklisted_title">Blocklisted</string>
    <string name="blacklisted_visit_convo">View Chat</string>
    <string name="block_dialog_title">Number to Block</string>
    <string name="blocklist_last_message">Last message: %1$s</string>
    <string name="blocklist_no_messages">No messages</string>
    <string name="bot_did_upgrade">Textra was just upgraded to version %1$s</string>
    <string name="bot_emoji" />
    <string name="bot_help1_fromUser">help</string>
    <string name="bot_help2_fromUser">help me</string>
    <string name="bot_help3_fromUser">support</string>
    <string name="bot_help9_toUser_gotoSupport">"Hang on, I'll take you there…"</string>
    <string name="bot_help9_toUser_offer">"You can get help by going to Settings > Support. You can find answers there, or ask a human. Do you want me to take you there (type 'yes')?"</string>
    <string name="bot_hi1_fromUser">hi</string>
    <string name="bot_hi2_fromUser">hello</string>
    <string name="bot_hi3_fromUser">howdy</string>
    <string name="bot_hi4_fromUser">yo</string>
    <string name="bot_hi5_fromUser">hey</string>
    <string name="bot_hi9_toUser">Greetings!</string>
    <string name="bot_hi_there">Hi there!</string>
    <string name="bot_im_simple">"Sorry, I'm just a simple bot! You can type '%1$s' to get a tip."</string>
    <string name="bot_im_simple2">"Welcome to Textra. I'm a simple bot. You can send me anything you want, but I only understand some simple things. For example, you can type '%1$s' to get a tip."</string>
    <string name="bot_mms_audio_toUser">Are you trying to tell me something?</string>
    <string name="bot_mms_gif_toUser">Oooh, nice GIF!</string>
    <string name="bot_mms_image_toUser">Oooh, pretty pictures…</string>
    <string name="bot_mms_vcard_toUser">"Thanks, I'll update my little black book"</string>
    <string name="bot_mms_video_toUser">Prefer YouTube myself</string>
    <string name="bot_testNotification1_blocklist">"You can't block me, sorry."</string>
    <string name="bot_testNotification1_call">"You can't call me yet, sorry."</string>
    <string name="bot_testNotification1_toUser">Testing, testing, one, two…</string>
    <string name="bot_thanks1_fromUser">thanks</string>
    <string name="bot_thanks9_toUser">"You're welcome"</string>
    <string name="bot_tip10_toUser">"Tip: you can lock messages so you can't accidentally delete them. Lock messages by long pressing them and choosing '%1$s' in the dot-dot-dot menu."</string>
    <string name="bot_tip1_fromUser">hint</string>
    <string name="bot_tip1_toUser">Tip: on the right hand side of the screen there are hidden timestamps for each bubble. Drag a bubble to the left to see them. Try it now!</string>
    <string name="bot_tip2_fromUser">tip</string>
    <string name="bot_tip2_toUser">"Tip: tap on a bubble to get quick options. Try it now! Then tap '%1$s'."</string>
    <string name="bot_tip3_fromUser">tips</string>
    <string name="bot_tip3_toUser">Tip: in the chat list, drag left to reveal the call icon. Drag right for delete icon and message count.</string>
    <string name="bot_tip6_toUser">Tip: tap the + icon, then long press the images icon to quickly select your most recent picture.</string>
    <string name="bot_tip7_toUser">Tip: in the + panel, long press the camera icon to launch the full camera app.</string>
    <string name="bot_tip9_toUser">Tip: tap the + icon to add things to a message. Try it now!</string>
    <string name="bot_yes1_fromUser">yes</string>
    <string name="bot_yes2_fromUser">yup</string>
    <string name="bot_yes3_fromUser">yep</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_back_content_desc">Back</string>
    <string name="bubblestyle_bubblecolor_title">Bubble Color</string>
    <string name="bubblestyle_example_incoming">Make me beautiful</string>
    <string name="bubblestyle_example_incoming_short">Hi!</string>
    <string name="bubblestyle_example_outgoing">Me too!</string>
    <string name="bubblestyle_example_outgoing_only">Color me!</string>
    <string name="bubblestyle_example_outgoing_short">Yo</string>
    <string name="bubblestyle_incoming_bubble_tab">Received</string>
    <string name="bubblestyle_outgoing_bubble_tab">Sent</string>
    <string name="bubblestyle_prompt">Bubble Colors</string>
    <string name="bubblestyle_sent_only_prompt">Sent Bubble Color</string>
    <string name="bubblestyle_textcolor_title">Text Color</string>
    <string name="call">Call</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="call_to_action_install">Install</string>
    <string name="call_to_action_learn_more">Learn More</string>
    <string name="cant_play_video">"Can't play this video"</string>
    <string name="ccpa_consent_btn_message">Confirm</string>
    <string name="ccpa_consent_message">"I want to make a 'Do Not Sell My Personal Information' request."</string>
    <string name="ccpa_content_message"> <p>When you visit this website, we collect personal information such as IP addresses, cookie identifiers and other pseudonymous identifiers. This information may be used to personalize content based on your interests, run and optimize advertising campaigns tailored to you, measure the performance of ads and content, and derive insights about the audiences who engage with ads and content. This information may also be disclosed by us to third parties on the <a href="https://www.iabprivacy.com/optout.html">IAB’s List of Downstream Participants</a> that may further disclose it to other third parties.</p>"

 "<p>Using personal information as described above is an integral part of how we operate our website, make revenue to support our staff, and generate relevant content for our audience. You can learn more about our data collection and use practices in our Privacy Policy.</p>"

 "<p>If you wish to opt out of the disclosure of your personal information to third parties by us, please use the below opt out and confirm your selection. Please note that after your opt out request is processed, you may continue seeing interest-based ads based on personal Information utilized by us or personal information disclosed to third parties prior to your opt out. You may separately opt out of the further disclosure of your personal information by third parties on the <a href="https://www.iabprivacy.com/optout.html">IAB’s List of Downstream Participants</a>.</p> </string>
    <string name="ccpa_privacy_title">I want to request that you ‘Do Not Sell My Personal Information’</string>
    <string name="change_preferences">Change Preferences</string>
    <string name="goto_settings">Go to Settings</string>
    <string name="initialsync2_start_using">Start using Textra</string>
    <string name="intro_tagline">Simple. Beautiful. </string>
    <string name="intro_tagline_fast">Fast.</string>
    <string name="intro_tagline_hyper_fast"><b>Hyper</b> Fast.</string>
    <string name="pluspanel_download_emoji_plugin">Get thousands of beautiful Twitter style emojis to share with your friends!</string>
    <string name="pluspanel_download_now">Download Now</string>
    <string name="settings_emojistyle_downloading_progress">Downloading…</string>
    <string name="settings_make_vibrate_pattern_button_save">Save</string>
    <string name="settings_make_vibrate_pattern_button_start_again">Start Again</string>
    <string name="settings_make_vibrate_pattern_button_stop">Stop</string>
    <string name="settings_make_vibrate_pattern_tap_to_record">Tap to record</string>
    <string name="settings_make_vibrate_pattern_tap_to_vibrate">Tap the rhythm…</string>
    <string name="upgraded_to_pro_no_more_ads">No more ads ever.</string>
    <string name="upgraded_to_pro_summary">Your support really helps!</string>
    <string name="upgraded_to_pro_title">"You're a Pro user"</string>
</resources>