<?xml version="1.0" encoding="utf-8"?>
<com.mplus.lib.ui.common.base.BaseFrameLayout a:layout_width="match_parent" a:layout_height="match_parent" app:shadow="top" style="?plusPanel"
  xmlns:a="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mplus.lib.ui.common.base.BaseRecyclerView a:id="@id/emojiGroups" a:clipChildren="false" a:clipToPadding="false" a:layout_width="match_parent" a:layout_height="match_parent" style="?plusPanel_emojisPanel" />
    <com.mplus.lib.ui.common.base.BaseLinearLayout a:layout_gravity="center_vertical" a:orientation="vertical" a:id="@id/download" a:layout_width="match_parent" a:layout_height="match_parent" app:shadow="top" style="?plusPanel_downloadEmojis">
        <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/downloadText" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/pluspanel_download_emoji_plugin" style="?plusPanel_downloadEmojisText" />
        <com.mplus.lib.ui.common.base.BaseButton a:id="@id/downloadButton" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/pluspanel_download_now" style="?common_raised_button_per_contact_themecolor" />
        <com.mplus.lib.ui.common.base.BaseConstraintLayout a:id="@id/downloading" a:layout_width="wrap_content" a:layout_height="wrap_content">
            <com.mplus.lib.ui.common.base.BaseTextView a:textSize="14.0sp" a:textColor="?text_dark_gray" a:id="@id/downloadingText" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_marginRight="8.0dp" a:text="@string/settings_emojistyle_downloading_progress" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/downloadInProgress" app:layout_constraintTop_toTopOf="parent" />
            <com.mplus.lib.ui.common.base.BaseImageView a:id="@id/downloadInProgress" a:layout_width="24.0dp" a:layout_height="24.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/downloadingText" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </com.mplus.lib.ui.common.base.BaseConstraintLayout>
    </com.mplus.lib.ui.common.base.BaseLinearLayout>
</com.mplus.lib.ui.common.base.BaseFrameLayout>
