<?xml version="1.0" encoding="utf-8"?>
<com.mplus.lib.ui.common.base.BaseFrameLayout a:id="@id/main" a:layout_width="match_parent" a:layout_height="match_parent" a:keepScreenOn="true" app:tintBackgroundWith="primaryColor"
  xmlns:a="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mplus.lib.ui.common.base.BaseConstraintLayout a:id="@id/intro_welcome_content" a:visibility="gone" a:layoutAnimation="@anim/intro_welcome_list" a:layout_width="match_parent" a:layout_height="match_parent" a:animateLayoutChanges="true">
        <com.mplus.lib.ui.common.base.BaseImageView a:id="@id/intro_welcome_logo" a:layout_width="128.0dp" a:layout_height="128.0dp" a:src="@drawable/intro_logo" app:layout_constraintBottom_toTopOf="@id/tagline_holder" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.4" app:layout_constraintVertical_chainStyle="packed" app:tintWith="primaryTextColor" />
        <com.mplus.lib.ui.common.base.BaseConstraintLayout a:id="@id/tagline_holder" a:layout_width="0.0dp" a:layout_height="wrap_content" a:animateLayoutChanges="true" app:layout_constraintBottom_toTopOf="@id/startButton" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/intro_welcome_logo">
            <com.mplus.lib.ui.common.base.BaseTextView a:textSize="20.0sp" a:id="@id/intro_welcome_tagline" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/intro_tagline" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/intro_welcome_tagline_fast" app:layout_constraintTop_toTopOf="parent" app:tintWith="primaryTextColor" />
            <com.mplus.lib.ui.common.base.BaseTextView a:textSize="20.0sp" a:id="@id/intro_welcome_tagline_fast" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/intro_tagline_fast" app:layout_constraintBaseline_toBaselineOf="@id/intro_welcome_tagline" app:layout_constraintLeft_toRightOf="@id/intro_welcome_tagline" app:layout_constraintRight_toLeftOf="@id/intro_welcome_tagline_hyper_fast" app:tintWith="primaryTextColor" />
            <com.mplus.lib.ui.common.base.BaseTextView a:textSize="20.0sp" a:id="@id/intro_welcome_tagline_hyper_fast" a:visibility="gone" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/intro_tagline_hyper_fast" app:layout_constraintBaseline_toBaselineOf="@id/intro_welcome_tagline" app:layout_constraintLeft_toRightOf="@id/intro_welcome_tagline_fast" app:layout_constraintRight_toRightOf="parent" app:tintWith="primaryTextColor" />
        </com.mplus.lib.ui.common.base.BaseConstraintLayout>
        <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/startButton" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_marginTop="56.0dp" a:text="@string/initialsync2_start_using" app:layout_constraintBottom_toTopOf="@id/permissionsExplainText" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tagline_holder" style="?initialSync_startUsing" />
        <com.mplus.lib.ui.common.base.BaseTextView a:textSize="14.0sp" a:gravity="center" a:id="@id/permissionsExplainText" a:paddingLeft="32.0dp" a:paddingRight="32.0dp" a:visibility="invisible" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_marginTop="16.0dp" a:lines="3" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/startButton" app:tintWith="primaryTextColor" />
    </com.mplus.lib.ui.common.base.BaseConstraintLayout>
</com.mplus.lib.ui.common.base.BaseFrameLayout>
