<?xml version="1.0" encoding="utf-8"?>
<com.mplus.lib.ui.common.base.BaseConstraintLayout a:id="@id/main" a:layout_width="match_parent" a:layout_height="match_parent"
  xmlns:a="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/common_actionbar" />
    <com.mplus.lib.ui.common.base.BaseLinearLayout a:orientation="vertical" a:id="@id/settingsContainer" a:layout_width="0.0dp" a:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/actionbarContainer" app:shadow="topHeavy" />
    <com.mplus.lib.ui.common.base.BaseRecyclerView a:id="@id/list" a:layout_width="0.0dp" a:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/settingsContainer" />
    <com.mplus.lib.ui.common.base.BaseLinearLayout a:gravity="center_vertical" a:id="@id/explain" a:paddingBottom="60.0dp" a:visibility="gone" a:layout_width="0.0dp" a:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/settingsContainer">
        <com.mplus.lib.ui.common.base.BaseTextView a:layout_width="match_parent" a:layout_height="wrap_content" a:text="@string/blacklist_empty2" style="?blacklist_empty" />
        <com.mplus.lib.ui.common.base.BaseTextView a:layout_width="match_parent" a:layout_height="wrap_content" a:layout_marginTop="16.0dp" a:text="@string/blacklist_empty" style="?blacklist_empty" />
        <com.mplus.lib.ui.common.base.BaseTextView a:layout_width="match_parent" a:layout_height="wrap_content" a:text="@string/blacklist_empty3" style="?blacklist_empty" />
    </com.mplus.lib.ui.common.base.BaseLinearLayout>
    <com.mplus.lib.ui.common.fab.FloatingActionButtonBackground a:layout_gravity="right|bottom" a:id="@id/plusButton" a:layout_width="@dimen/floatingButtonSize" a:layout_height="@dimen/floatingButtonSize" a:layout_marginRight="8.0dp" a:layout_marginBottom="8.0dp" app:flatButtonBackgroundSelector="onThemeColor" app:flatButtonRippleBorderBehaviour="round" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:tintBackgroundWith="primaryColor">
        <com.mplus.lib.ui.common.base.BaseImageView a:layout_gravity="center" a:background="@null" a:layout_width="match_parent" a:layout_height="match_parent" a:scaleType="center" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcVector="@drawable/ic_add_black_24dp" app:tintWith="primaryTextColor" />
    </com.mplus.lib.ui.common.fab.FloatingActionButtonBackground>
</com.mplus.lib.ui.common.base.BaseConstraintLayout>
